assets/css/style.css
/* ... */
.grid-row-3{
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 20px;
}

.grid-row-12{
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  grid-gap: 20px;
}

.grid-xs-1{
  grid-column: span 1;
}

.grid-xs-2{
  grid-column: span 2;
}

.grid-xs-3{
  grid-column: span 3;
}
.grid-xs-4{
  grid-column: span 4;
}
.grid-xs-5{
  grid-column: span 5;
}
.grid-xs-6{
  grid-column: span 6;
}
.grid-xs-7{
  grid-column: span 7;
}
.grid-xs-8{
  grid-column: span 8;
}


@media (min-width: 768px){
  .grid-sm-1{
    grid-column: span 1;
  }
}

@media (min-width: 992px){
  .grid-md-1{
    grid-column: span 1;
  }
}

@media (min-width: 1200px) {
  .grid-lg-1{
    grid-column: span 1;
  }
}

.grid-center{
  margin: auto;
  width: 80%;
}

.image-size-200{
  max-width: 200px;
  max-height: 250px;
}
.image-size-250{
  width: 120%;
  max-width: 250px;
  max-height: 250px;
}

